[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zatteliet-github-io"
dynamic = []
description = 'Personal website.'
readme = "README.md"
requires-python = ">=3.12"
# license = "MIT"
keywords = []
authors = [{ name = "camiel", email = "camieledward@gmail.com" }]
dependencies = ["pelican[markdown]"]
version = "0.0.1"


[tool.coverage.run]
source_pkgs = ["zatteliet_github_io", "tests"]
branch = true
parallel = true
omit = ["src/zatteliet_github_io/__about__.py"]

[tool.coverage.paths]
zatteliet_github_io = [
  "src/zatteliet_github_io",
  "*/zatteliet-github-io/src/zatteliet_github_io",
]
tests = ["tests", "*/zatteliet-github-io/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
